31-08-05    Some magic_quotes_gpc scenarios weren't dealt with correctly, now
            fixed (Eric Persson)
30-08-05    UserMgr Search/Sort/Pager fixes (Tobias Kuckuck)
30-08-05    Moved clone() emulation into constants.php
30-08-05    Seagull is now PHP5.1 compliant, this involved some local as
            well as PEAR modifications.

IMPROVEMENTS
05-08-05    Added ability to scrape and include wiki pages, requires php5 + tidy
02-08-05    Static articles can now be edited inline
02-08-05    Added postgres user and database creation script (Pierpaolo Toniolo)
31-08-05    onload element attribute only included if event is non-empty (Philippe Lhoste)
30-08-05    Turkish translation added (Metin Tinay)
30-08-05    Added the db function unix_timestamp for oracle and postgres (Tobias Kuckuck)
30-08-05    Added missing passwordmgr_redirecttoedit permission (Tobias Kuckuck)
29-08-05    Renamed ConfigMgr's '_insert' method to '_update' to correctly reflect action, 
            sql upgrade file provided in etc/sql_upgrades
29-08-05    Added some permission descriptions (Rolandas Burbulis)
23-08-05    Added ability to view login history for a given user (Rolandas Burbulis)
23-08-05    Release script now uploads API docs to sgl site for browsing
19-08-05    Changed CSS z-index in style.php so FCK downdowns are not hidden
19-08-05    Routine to get page execution time was improved to be more accurate, it    
            it now reports the same times as ZDE (Jochem Gugelot).

+-----------------------+
| VERSION: 0.4.5        |
+-----------------------+
BUGFIXES
18-08-05    Longtime outstanding bug where db session handling was broken has
            been fixed (Louay Gammo)
10-08-05    Fixed bug where editing articles 'remembered' the GUI category, not
            the article category
10-08-05    Fixed verticalSimple.css to work with new CSS
08-08-05    Removed quoting of chartset=utf-8 (Ernest Beinrohr)