@@ -49,7 +49,7 @@ CREATE TABLE if not exists organisation (
   addr_3 varchar(128) default NULL,
   city varchar(32) NOT NULL default '',
   region varchar(32) default NULL,
-  country varchar(32) default NULL,
+  country char(2) default NULL,
   post_code varchar(16) default NULL,
   telephone varchar(32) default NULL,
   website varchar(128) default NULL,
@@ -183,7 +183,7 @@ CREATE TABLE if not exists usr (
   addr_3 varchar(128) default NULL,
   city varchar(64) default NULL,
   region varchar(32) default NULL,
-  country varchar(64) default NULL,
+  country char(2) default NULL,
   post_code varchar(16) default NULL,
   is_email_public smallint(6) default NULL,
   is_acct_active smallint(6) default NULL,
