@@ -50,7 +50,7 @@ addr_2 varchar(128) default NULL,
 addr_3 varchar(128) default NULL,
 city varchar(32) default '' NOT NULL,
 region varchar(32) default NULL,
-country varchar(32) default NULL,
+country char(2) default NULL,
 post_code varchar(16) default NULL,
 telephone varchar(32) default NULL,
 website varchar(128) default NULL,
@@ -197,7 +197,7 @@ addr_2               VARCHAR(128)         null,
 addr_3               VARCHAR(128)         null,
 city                 VARCHAR(64)          null,
 region               VARCHAR(32)          null,
-country              VARCHAR(64)          null,
+country              CHAR(2)              null,
 post_code            VARCHAR(16)          null,
 is_email_public      NUMBER(5)                 null,
 is_acct_active       NUMBER(5)                 null,
