@@ -22,6 +22,7 @@ BUGFIXES
             well as PEAR modifications.
 
 IMPROVEMENTS
+06-08-05    Updated country fields in all DB schemas to CHAR(2) (Philippe Lhoste)
 05-08-05    Added ability to scrape and include wiki pages, requires php5 + tidy
 02-08-05    Static articles can now be edited inline
 02-08-05    Added postgres user and database creation script (Pierpaolo Toniolo)
